external-crates/move/crates/move-compiler/tests/move_2024/typing/let_mut_decl.exp
error[E04024]: invalid usage of immutable variable
  ┌─ tests/move_2024/typing/let_mut_decl.move:6:9
  │
3 │         let x;
  │             - To use the variable mutably, it must be declared 'mut', e.g. 'mut x'
  ·
6 │         x = 1;
  │         ^ Invalid assignment of immutable variable 'x'

error[E04024]: invalid usage of immutable variable
   ┌─ tests/move_2024/typing/let_mut_decl.move:14:9
   │
11 │         let x;
   │             - To use the variable mutably, it must be declared 'mut', e.g. 'mut x'
   ·
14 │         x = 1;
   │         ^ Invalid assignment of immutable variable 'x'

error[E04024]: invalid usage of immutable variable
   ┌─ tests/move_2024/typing/let_mut_decl.move:21:9
   │
19 │         let x;
   │             - To use the variable mutably, it must be declared 'mut', e.g. 'mut x'
20 │         if (cond) { x = 0; copy x; };
21 │         x = 1;
   │         ^ Invalid assignment of immutable variable 'x'

